Lab_3/ingress.yaml
apiVersion: v1
kind: Service
metadata:
  name: front
  labels:
    app: front
spec:
  type: NodePort
  selector:
    app: front
  ports:
    - protocol: TCP
      port: 3000
      targetPort: 3000
      nodePort: 31111
